welcome.lessons.welcome.array.has271.Has271.scala.error
has271:10: error: Unmatched closing brace '}' ignored here
 }
 ^